# pyyak

./: .gitignore  CHANGELOG.md  LICENSE  pyproject.toml
src/: test.py
src/pyyak/: __init__.py  example.py
src/pyyak/core/: config.py  link_extractor.py  managers.py  page_fetcher.py  rate_limiter.py  spider.py
