[project]
name = "pyyak"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Stefan Popov", email = "vnqelfienb@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
pyyak = "pyyak:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
