[project]
name = "pyyak"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Stefan Popov", email = "vnqelfienb@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.10.3",
    "selectolax>=0.3.27",
    "trio>=0.27.0",
]

[project.scripts]
pyyak = "pyyak:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "commitizen>=4.1.0",
    "ruff>=0.8.3",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
